update train_utils.py reconstruct_images

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e97141d6-ecb3-4c32-bd44-2abb34906824",
    "metadata": {
     "tags": []
@@ -79,10 +79,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fa40294b7f0>"
+       "<torch._C.Generator at 0x7f2b8402f7f0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d3c35007-978b-4ce4-9140-dac536a6971d",
    "metadata": {
     "tags": []
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "37903799-6008-4013-86f8-7fbd6e345038",
    "metadata": {
     "tags": []
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "40d6cc42-dccf-42f3-898c-074e242ce71f",
    "metadata": {
     "tags": []
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a54d50f4-3e83-493b-b197-4bd043347e34",
    "metadata": {
     "tags": []
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "06b1de95-d3c8-4c94-8345-5b8666b65d6f",
    "metadata": {
     "tags": []
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "94cc58e5-e78c-4c3c-a8a9-d82ff5c2ea4e",
    "metadata": {
     "tags": []
@@ -419,6 +419,7 @@
     "    original_image = Image.open(img_path)\n",
     "    image = torch.from_numpy(np.array(original_image).astype(np.float32)).permute(2, 0, 1).unsqueeze(0) / 255.0\n",
     "    encoded_tokens = titok_tokenizer.encode(image.to(device))[1][\"min_encoding_indices\"]\n",
+    "    # print(\"Encoded Tokens\", encoded_tokens)\n",
     "    print(\"Token Shape:\", encoded_tokens.shape)\n",
     "    \n",
     "    # # Randomly selection\n",
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5a38689f-9d22-451f-b487-7ef3b160b09d",
    "metadata": {
     "tags": []
@@ -455,6 +456,13 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 12, 1, 64])\n",
+      "Encoded Tokens tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
+      "           414, 1928, 1983,  977,  714, 3782, 2233, 3970, 2304,  892, 4054,\n",
+      "            77, 3502, 2994, 1533, 3651, 1605, 2865, 2828,  776, 1000, 3113,\n",
+      "          3755, 3000, 3571, 1123, 3075, 1436,  325, 3977, 3364, 2672, 1727,\n",
+      "          3506, 2034,  189, 3757,  329, 1228,  790, 3397,  964, 1358, 2820,\n",
+      "          2585, 1559, 3110, 1325, 1048,  266, 3316, 2852, 3808]]],\n",
+      "       device='cuda:0')\n",
       "Token Shape: torch.Size([1, 1, 64])\n",
       "torch.Size([1, 1, 768])\n",
       "Input Image is represented by codes tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
@@ -501,6 +509,13 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 12, 1, 64])\n",
+      "Encoded Tokens tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
+      "           414, 1928, 1983,  977,  714, 3782, 2233, 3970, 2304,  892, 4054,\n",
+      "            77, 3502, 2994, 1533, 3651, 1605, 2865, 2828,  776, 1000, 3113,\n",
+      "          3755, 3000, 3571, 1123, 3075, 1436,  325, 3977, 3364, 2672, 1727,\n",
+      "          3506, 2034,  189, 3757,  329, 1228,  790, 3397,  964, 1358, 2820,\n",
+      "          2585, 1559, 3110, 1325, 1048,  266, 3316, 2852, 3808]]],\n",
+      "       device='cuda:0')\n",
       "Token Shape: torch.Size([1, 1, 64])\n",
       "torch.Size([1, 1, 768])\n",
       "Input Image is represented by codes tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
@@ -547,6 +562,13 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 12, 1, 64])\n",
+      "Encoded Tokens tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
+      "           414, 1928, 1983,  977,  714, 3782, 2233, 3970, 2304,  892, 4054,\n",
+      "            77, 3502, 2994, 1533, 3651, 1605, 2865, 2828,  776, 1000, 3113,\n",
+      "          3755, 3000, 3571, 1123, 3075, 1436,  325, 3977, 3364, 2672, 1727,\n",
+      "          3506, 2034,  189, 3757,  329, 1228,  790, 3397,  964, 1358, 2820,\n",
+      "          2585, 1559, 3110, 1325, 1048,  266, 3316, 2852, 3808]]],\n",
+      "       device='cuda:0')\n",
       "Token Shape: torch.Size([1, 1, 64])\n",
       "torch.Size([1, 1, 768])\n",
       "Input Image is represented by codes tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
@@ -593,6 +615,13 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 12, 1, 64])\n",
+      "Encoded Tokens tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
+      "           414, 1928, 1983,  977,  714, 3782, 2233, 3970, 2304,  892, 4054,\n",
+      "            77, 3502, 2994, 1533, 3651, 1605, 2865, 2828,  776, 1000, 3113,\n",
+      "          3755, 3000, 3571, 1123, 3075, 1436,  325, 3977, 3364, 2672, 1727,\n",
+      "          3506, 2034,  189, 3757,  329, 1228,  790, 3397,  964, 1358, 2820,\n",
+      "          2585, 1559, 3110, 1325, 1048,  266, 3316, 2852, 3808]]],\n",
+      "       device='cuda:0')\n",
       "Token Shape: torch.Size([1, 1, 64])\n",
       "torch.Size([1, 1, 768])\n",
       "Input Image is represented by codes tensor([[[1327, 3938, 1656, 3309, 2768, 3240, 1479, 1627, 3097, 3094, 2258,\n",
